add a days_left for the next meeting activity

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,6 +22,12 @@
         android:text="@string/button_send" 
         android:onClick="sendMessage"/>
     
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_date" 
+        android:onClick="showDate"/>
+    
 
 
 </LinearLayout>
